use front matter to build content sections

--- a/layouts/schedulers/list.html
+++ b/layouts/schedulers/list.html
@@ -9,101 +9,31 @@
       </div>
     </div>
     <div class="scheduler-types-section">
-      <div class="scheduler-type main-section u-borderBottom--gray">
-        <div class="container">
-          <div class="paddingContainer">
-            <div class="u-flexTabletReflow">
-              <div class="flex1 flex-column flex-verticalCenter u-lineHeight--normal left-content">
-                <span class="logo replicatedLogo"></span>
-                <h5>Replicated scheduler</h5>
-                <p>The Replicated scheduler is a mature container orchestration runtime that supports Docker 1.7.1 and newer. Some more text talking about this feature and how cool it is. 
-                  You really should try it out, maybe this will be the one for you!</p>
-                <p>You thought I was done raving about this did you? Sorry, there’s still more to talk about. It really is an awesome choice, although so are the other two if I’m honest.</p>
-              </div>
-              <div class="flex1 flex-column u-paddingLeft--most right-content flex-verticalCenter">
-                <ul class="pros-list">
-                  <li>
-                    <h6>Advantage of scheduler</h6>
-                    <p>Some text here talking about the advantage of using this scheduler as opposed to others.</p>
-                  </li>
-                  <li>
-                    <h6>Advantage of scheduler</h6>
-                    <p>Some text here talking about the advantage of using this scheduler as opposed to others.</p>
-                  </li>
-                  <li>
-                    <h6>Advantage of scheduler</h6>
-                    <p>Some text here talking about the advantage of using this scheduler as opposed to others.</p>
-                  </li>
-                </ul>
+      {{ range .Params.schedulerTypes }}
+        <div class="scheduler-type main-section u-borderBottom--gray">
+          <div class="container">
+            <div class="paddingContainer">
+              <div class='u-flexTabletReflow {{ if eq .type "kubernetes"}} flexDirection--rowReverse {{ end }}'>
+                <div class='flex1 flex-column flex-verticalCenter u-lineHeight--normal {{ if eq .type "kubernetes"}} right-content {{ else }} left-content {{ end }}'>
+                  <span class="logo {{ .type }}Logo"></span>
+                  <h5>{{ .title }}</h5>
+                  <p>{{ .description }}</p>
+                </div>
+                <div class='flex1 flex-column u-paddingLeft--most flex-verticalCenter {{ if eq .type "kubernetes"}} left-content {{ else }} right-content {{ end }}'>
+                  <ul class="pros-list">
+                    {{ range .features }}
+                      <li>
+                        <h6>{{ .title }}</h6>
+                        <p>{{ .description }}</p>
+                      </li>
+                    {{ end }}
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-
-      <div class="scheduler-type main-section u-borderBottom--gray">
-        <div class="container">
-          <div class="paddingContainer">
-            <div class="u-flexTabletReflow flexDirection--rowReverse">
-              <div class="flex1 flex-column flex-verticalCenter u-lineHeight--normal right-content">
-                <span class="logo kubernetesLogo"></span>
-                <h5>Kubernetes</h5>
-                <p>Kubernetes is a powerful and popular container orchestration and runtime that’s quickly gaining popularity. Some more text talking about this feature and how cool it is. 
-                  You really should try it out, maybe this will be the one for you!</p>
-                <p>You thought I was done raving about this did you? Sorry, there’s still more to talk about. It really is an awesome choice, although so are the other two if I’m honest.</p>
-              </div>
-              <div class="flex1 flex-column u-paddingLeft--most left-content flex-verticalCenter">
-                <ul class="pros-list">
-                  <li>
-                    <h6>Advantage of scheduler</h6>
-                    <p>Some text here talking about the advantage of using this scheduler as opposed to others.</p>
-                  </li>
-                  <li>
-                    <h6>Advantage of scheduler</h6>
-                    <p>Some text here talking about the advantage of using this scheduler as opposed to others.</p>
-                  </li>
-                  <li>
-                    <h6>Advantage of scheduler</h6>
-                    <p>Some text here talking about the advantage of using this scheduler as opposed to others.</p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="scheduler-type main-section u-borderBottom--gray">
-        <div class="container">
-          <div class="paddingContainer">
-            <div class="u-flexTabletReflow">
-              <div class="flex1 flex-column flex-verticalCenter u-lineHeight--normal left-content">
-                <span class="logo dockerSwarmLogo"></span>
-                <h5>Docker Swarm</h5>
-                <p>Docker Swarm is great if you have existing docker-compose yaml and want to target servers running Docker 1.13.1 or newer. Some more text talking about this feature and how cool it is. 
-                  You really should try it out, maybe this will be the one for you!</p>
-                <p>You thought I was done raving about this did you? Sorry, there’s still more to talk about. It really is an awesome choice, although so are the other two if I’m honest.</p>
-              </div>
-              <div class="flex1 flex-column u-paddingLeft--most right-content flex-verticalCenter">
-                <ul class="pros-list">
-                  <li>
-                    <h6>Advantage of scheduler</h6>
-                    <p>Some text here talking about the advantage of using this scheduler as opposed to others.</p>
-                  </li>
-                  <li>
-                    <h6>Advantage of scheduler</h6>
-                    <p>Some text here talking about the advantage of using this scheduler as opposed to others.</p>
-                  </li>
-                  <li>
-                    <h6>Advantage of scheduler</h6>
-                    <p>Some text here talking about the advantage of using this scheduler as opposed to others.</p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      {{ end }}
     </div>
 
     <div class="compare-section-wrapper">
@@ -126,42 +56,14 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
-                      <td>Some feature name</td>
-                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
-                      <td class="icon-cell"><span class="icon u-grayFailCircle"></span></td>
-                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
-                    </tr>
-                    <tr>
-                      <td>Some feature name</td>
-                      <td class="icon-cell"><span class="icon u-grayFailCircle"></span></td>
-                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
-                      <td class="icon-cell"><span class="icon u-grayFailCircle"></span></td>
-                    </tr>
-                    <tr>
-                      <td>Some feature name</td>
-                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
-                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
-                      <td class="icon-cell"><span class="icon u-grayFailCircle"></span></td>
-                    </tr>
-                    <tr>
-                      <td>Some feature name</td>
-                      <td class="icon-cell"><span class="icon u-grayFailCircle"></span></td>
-                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
-                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
-                    </tr>
-                    <tr>
-                      <td>Some feature name</td>
-                      <td class="icon-cell"><span class="icon u-grayFailCircle"></span></td>
-                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
-                      <td class="icon-cell"><span class="icon u-grayFailCircle"></span></td>
-                    </tr>
-                    <tr>
-                      <td>Some feature name</td>
-                      <td class="icon-cell"><span class="icon u-grayFailCircle"></span></td>
-                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
-                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
-                    </tr>
+                    {{ range .Params.featureTableItems }}
+                      <tr>
+                        <td>{{ .name }}</td>
+                        {{ range .support }}
+                          <td class="icon-cell"><span class="icon u-{{ . }}Circle"></span></td>
+                        {{ end }}
+                      </tr>
+                    {{ end }}
                   </tbody>
                 </table>
               </div>
