--- a/layouts/partials/scheduler_section.html
+++ b/layouts/partials/scheduler_section.html
@@ -16,7 +16,7 @@
                   <span class="replicatedLogo"></span>
                 </div>
                 <div>
-                  <p class="u-fontSize--largest u-color--tuna u-fontWeight--medium u-marginBottom--normal">Replicated</p>
+                  <p class="u-fontSize--largest u-color--tuna u-fontWeight--medium u-marginBottom--normal">Replicated + built-in scheduler</p>
                   <p class="u-fontSize--large u-color--dustyGray u-lineHeight--normal">The Replicated scheduler is a mature container orchestration runtime that supports Docker 1.7.1 and newer.</p>
                 </div>
               </div>
@@ -28,7 +28,7 @@
                   <span class="kubernetesLogo"></span>
                 </div>
                 <div>
-                  <p class="u-fontSize--largest u-color--tuna u-fontWeight--medium u-marginBottom--normal">Kubernetes</p>
+                  <p class="u-fontSize--largest u-color--tuna u-fontWeight--medium u-marginBottom--normal">Kubernetes + Replicated</p>
                   <p class="u-fontSize--large u-color--dustyGray u-lineHeight--normal">Kubernetes is a powerful and popular container orchestration and runtime that's quickly gaining popularity.</p>
                 </div>
               </div>
@@ -40,7 +40,7 @@
                   <span class="dockerSwarmLogo"></span>
                 </div>
                 <div>
-                  <p class="u-fontSize--largest u-color--tuna u-fontWeight--medium u-marginBottom--normal">Docker Swarm</p>
+                  <p class="u-fontSize--largest u-color--tuna u-fontWeight--medium u-marginBottom--normal">Docker Swarm + Replicated</p>
                   <p class="u-fontSize--large u-color--dustyGray u-lineHeight--normal">Use Docker Swarm if you have existing docker-compose yaml and want to target servers running Docker 1.13.1 or newer.</p>
                 </div>
               </div>
