--- a/layouts/partials/footer-items.html
+++ b/layouts/partials/footer-items.html
@@ -5,7 +5,7 @@
         <img width="130" src="{{ .Site.BaseURL }}images/footer_logo@2x.png"/>
       </a>
     </div>
-    <div class="u-fontSize--small u-color--dustyGray u-marginBottom--small u-hidden--mobileTablet">&copy; {{ now.Format "2006" }},<a> Replicated Inc.</a></div>
+    <div class="u-fontSize--small u-color--dustyGray u-marginBottom--small u-hidden--mobileTablet">&copy; {{ now.Format "2006" }} <a> &nbsp;Replicated Inc.</a></div>
     <div class="u-fontSize--small u-color--dustyGray u-hidden--mobileTablet">All Rights Reserved</div>
   </div>
 </div><!--
@@ -45,7 +45,6 @@
     <p class="u-fontWeight--medium u-color--tuna">More</p>
     <ul>
       <li><a class="u-color--dustyGray u-textDecoration--underlineOnHover" href="https://github.com/replicatedhq">GitHub</a></li>
-      <li><a class="u-color--dustyGray u-textDecoration--underlineOnHover" href="https://preview.retraced.io">Retraced.io</a></li>
       <li><a class="u-color--dustyGray u-textDecoration--underlineOnHover" href="https://www.enterpriseready.io">EnterpriseReady.io</a></li>
     </ul>
   </div>
