--- a/layouts/partials/documentation_reference_section.html
+++ b/layouts/partials/documentation_reference_section.html
@@ -78,7 +78,7 @@
           </div><!--
           --><div class="doc-ref-list-item">
             <div class="doc-ref">
-              <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">API Reference</p>
+              <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">API Resources</p>
               <ul>
                 {{ range $index, $element := ($.Site.Taxonomies.categories.reference).Pages }}
                   <li>
