Updated date formatting

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -50,7 +50,7 @@
 											{{ end }}
 										</ul>
 									{{ end }}
-									<span class="u-fontSize--small u-color--silverSand u-fontWeight--medium">Last Updated <br><span class="u-fontWeight--bold u-color--dustyGray">{{ .Date.Format "Monday, Jan 2, 2006" }}</span></span>
+									<span class="u-fontSize--small u-color--silverSand u-fontWeight--medium">Last Updated <br><span class="u-fontWeight--bold u-color--dustyGray">{{ .Date.Format "02 Jan 2006" }}</span></span>
 								</div>
 							</div>
 						</div>
