--- a/static/css/utilities/gradients.css
+++ b/static/css/utilities/gradients.css
@@ -48,6 +48,16 @@
   background: linear-gradient(135deg, rgba(51,189,189,1) 0%, rgba(122,214,152,1) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#33bdbd', endColorstr='#7ad698', GradientType=1 );
 }
+.u-gradient--purpleToPink {
+  background: rgba(48,35,174,1);
+  background: -moz-linear-gradient(-45deg, rgba(48,35,174,1) 0%, rgba(200,109,215,1) 100%);
+  background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(48,35,174,1)), color-stop(100%, rgba(200,109,215,1)));
+  background: -webkit-linear-gradient(-45deg, rgba(48,35,174,1) 0%, rgba(200,109,215,1) 100%);
+  background: -o-linear-gradient(-45deg, rgba(48,35,174,1) 0%, rgba(200,109,215,1) 100%);
+  background: -ms-linear-gradient(-45deg, rgba(48,35,174,1) 0%, rgba(200,109,215,1) 100%);
+  background: linear-gradient(135deg, rgba(48,35,174,1) 0%, rgba(200,109,215,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3023AE', endColorstr='#C86DD7', GradientType=1 );
+}
 .u-gradient--blueToBlue {
   background: rgba(52,121,191,1);
   background: -moz-linear-gradient(-45deg, rgba(52,121,191,1) 0%, rgba(126,211,254,1) 100%);
