Added support for intro content on scheduler page

--- a/layouts/schedulers/list.html
+++ b/layouts/schedulers/list.html
@@ -8,6 +8,15 @@
         </div>
       </div>
     </div>
+    <div class="scheduler-type main-section u-borderBottom--gray">
+      <div class="container">
+        <div class="paddingContainer">
+          <div class="u-marginTop--more u-textAlign--left u-lineHeight--normal">
+            {{ .Content }}
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="scheduler-types-section">
       {{ range .Params.schedulerTypes }}
         <div class="scheduler-type main-section u-borderBottom--gray">
