--- a/static/css/utilities/gradients.css
+++ b/static/css/utilities/gradients.css
@@ -60,11 +60,11 @@
 }
 .u-gradient--blueToBlue {
   background: rgba(52,121,191,1);
-  background: -moz-linear-gradient(-45deg, rgba(52,121,191,1) 0%, rgba(126,211,254,1) 100%);
-  background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(52,121,191,1)), color-stop(100%, rgba(126,211,254,1)));
-  background: -webkit-linear-gradient(-45deg, rgba(52,121,191,1) 0%, rgba(126,211,254,1) 100%);
-  background: -o-linear-gradient(-45deg, rgba(52,121,191,1) 0%, rgba(126,211,254,1) 100%);
-  background: -ms-linear-gradient(-45deg, rgba(52,121,191,1) 0%, rgba(126,211,254,1) 100%);
-  background: linear-gradient(135deg, rgba(52,121,191,1) 0%, rgba(126,211,254,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3479bf', endColorstr='#7ed3fe', GradientType=1 );
+background: -moz-linear-gradient(-45deg, rgba(52,121,191,1) 0%, rgba(92,168,244,1) 100%);
+background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(52,121,191,1)), color-stop(100%, rgba(92,168,244,1)));
+background: -webkit-linear-gradient(-45deg, rgba(52,121,191,1) 0%, rgba(92,168,244,1) 100%);
+background: -o-linear-gradient(-45deg, rgba(52,121,191,1) 0%, rgba(92,168,244,1) 100%);
+background: -ms-linear-gradient(-45deg, rgba(52,121,191,1) 0%, rgba(92,168,244,1) 100%);
+background: linear-gradient(135deg, rgba(52,121,191,1) 0%, rgba(92,168,244,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3479bf', endColorstr='#5ca8f4', GradientType=1 );
 }
