[ch1611] page headers stay in containers at smaller widths, update scheduler page logos

--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -5,12 +5,12 @@
 				<div class="container u-marginTop--most">
 					<div class="paddingContainer">
 						<div class="flex flex-auto justifyContent--center u-marginTop--more">
-							<div class="flex-auto">
+							<div class="flex-auto u-hidden--mobileTablet">
 								<span class="icon u-docsHeaderIcon u-marginRight--normal"></span>
 							</div>
-							<div class="flex-auto">
+							<div class="flex-auto u-widthMobile--full">
 								<h3 class="u-color--white u-fontWeight--bold u-fontSize--header">Documentation</h3>
-								<p class="u-fontSize--normal u-fontWeight--medium u-color--white u-marginTop--small">Quickly find docs for whatever you need help with.</p>
+								<p class="u-fontSize--normal u-fontWeight--medium u-color--white u-marginTop--small u-lineHeight--normal">Quickly find docs for whatever you need help with.</p>
 							</div>
 						</div>
 					</div>
