--- a/layouts/guides/single.html
+++ b/layouts/guides/single.html
@@ -3,15 +3,17 @@
 		<article class="single">
 			<div class="u-gradient--orangeToOrange main-section flex-column flex1 justifyContent--center">
 				<div class="container u-marginTop--most">
-					<div class="flex flex-auto justifyContent--center u-marginTop--more">
-						<div class="flex-auto">
-							<span class="icon u-guidesHeaderIcon u-marginRight--normal"></span>
+						<div class="paddingContainer">
+							<div class="flex flex-auto justifyContent--center u-marginTop--more">
+								<div class="flex-auto u-hidden--mobileTablet">
+									<span class="icon u-guidesHeaderIcon u-marginRight--normal"></span>
+								</div>
+								<div class="flex-auto u-widthMobile--full">
+									<h3 class="u-color--white u-fontWeight--bold u-fontSize--header">Guides</h3>
+									<p class="u-fontSize--normal u-fontWeight--medium u-color--white u-marginTop--small u-lineHeight--normal">Step-by-step guides for all things Replicated.</p>
+								</div>
+							</div>
 						</div>
-						<div class="flex-auto">
-							<h3 class="u-color--white u-fontWeight--bold u-fontSize--header">Guides</h3>
-							<p class="u-fontSize--normal u-fontWeight--medium u-color--white u-marginTop--small">Step-by-step guides for all things Replicated.</p>
-						</div>
-					</div>
 				</div>
 			</div>
 			<div class="main-section">
