--- a/layouts/taxonomy/category.html
+++ b/layouts/taxonomy/category.html
@@ -8,9 +8,9 @@
 				<div class="container u-marginTop--most">
 					<div class="paddingContainer">
 						<div class="flex flex-auto justifyContent--center u-marginTop--more">
-							<div class="flex-auto">
+							<div class="flex-auto u-width--full">
 								<h3 class="u-color--white u-fontWeight--bold u-fontSize--header">{{ .Title }}</h3>
-                                <p class="u-fontSize--normal u-fontWeight--medium u-color--white u-marginTop--normal">{{ .Description }}</p>
+                                <p class="u-fontSize--normal u-fontWeight--medium u-color--white u-marginTop--normal u-lineHeight--normal">{{ .Description }}</p>
 							</div>
 						</div>
 					</div>
